--- a/www/inicio.html
+++ b/www/inicio.html
@@ -47,24 +47,9 @@
                 </div>
                 <div class="sidebar-logo">
                     <a onclick="CarregaMenu('estabelecimento.html')">  
-                    <img src="img/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />
+                    <img src="img/LOGO_eXCHANGE_BRANCO.png" width="138" height="60" />
                     </a>
                 </div>
-                <!--<div class="navigation-item">
-                    <a onclick="ClickBlock();" class="nav-item">
-                        <i class="fa  fa-navicon"></i>
-                        MENU
-                        <i class="fa"></i>
-                    </a>
-                </div>-->
-                <!--<div class="navigation-item">
-                    <a onclick="CarregaMenu('mapa.html')" class="nav-item">
-                        <i class="fa  fa-map-marker"></i>
-                        Mapa
-                        <i class="fa"></i>
-                    </a>
-                </div>-->
-                <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
                         <i class="fa  fa-search"></i>
@@ -72,7 +57,7 @@
                         <i class="fa"></i>
                     </a>
                 </div>
-                <!--<div class="sidebar-decoration"></div>-->
+                <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('perfil.html')" class="nav-item">
                         <i class="fa  fa-user"></i>
@@ -80,15 +65,7 @@
                         <i class="fa"></i>
                     </a>
                 </div>
-                <!--<div class="sidebar-decoration"></div>-->
-                <!--<div class="navigation-item">
-                    <a onclick="CarregaMenu('endereco.html')" class="nav-item">
-                        <i class="fa  fa-building"></i>
-                        Endereço
-                        <i class="fa"></i>
-                    </a>
-                </div>-->
-                <!--<div class="sidebar-decoration"></div>-->
+ 
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('historico.html')" class="nav-item">
                         <i class="fa  fa-clock-o"></i>
@@ -104,54 +81,7 @@
                         <i class="fa"></i>
                     </a>
                 </div>
-                <div id="ADMINAREA">
-                    <div class="navigation-item">
-                        <a onclick="CarregaMenu('estabelecimentomoeda.html')" class="nav-item">
-                            <i class="fa  fa-clock-o"></i>
-                            Config. Estabelecimento
-                            <i class="fa"></i>
-                        </a>
-                    </div>
-                    <div class="navigation-item">
-                        <a onclick="CarregaMenu('novoestabelecimento.html')" class="nav-item">
-                            <i class="fa  fa-clock-o"></i>
-                            Cadastra Estabelecimento
-                            <i class="fa"></i>
-                        </a>
-                    </div>
-                    <div class="navigation-item">
-                        <a onclick="CarregaMenu('pefilestabelecimento.html')" class="nav-item">
-                            <i class="fa  fa-clock-o"></i>
-                            Perfil Estabelecimento
-                            <i class="fa"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div id="ESTABELECIMENTO">
-                    <div class="navigation-item">
-                        <a onclick="CarregaMenu('estabelecimentomoeda.html')" class="nav-item">
-                            <i class="fa  fa-clock-o"></i>
-                            Config. Estabelecimento
-                            <i class="fa"></i>
-                        </a>
-                    </div>
-
-                    <div class="navigation-item">
-                        <a onclick="CarregaMenu('pefilestabelecimento.html')" class="nav-item">
-                            <i class="fa  fa-clock-o"></i>
-                            Perfil Estabelecimento
-                            <i class="fa"></i>
-                        </a>
-                    </div>
-                </div>
-                <!--<div class="navigation-item">
-                    <a href="#" class="nav-item">
-                        <i class="fa  fa-cog"></i>
-                        Opções
-                        <i class="fa"></i>
-                    </a>
-                </div>-->
+  
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('contato.html')" class="nav-item">
                         <i class="fa  fa-envelope"></i>
