--- a/www/compras.html
+++ b/www/compras.html
@@ -23,7 +23,7 @@
                         <div>
                             <fieldset>
                                 
-                                    <label class="input-label"><strong> Histórico </strong></label>
+                                    <label class="input-label"><strong> Minhas compras </strong></label>
                                     <div id="DIVHISTORICO">
                                     </div>
 </fieldset>
@@ -34,7 +34,7 @@
             </div>
         </fieldset>
     </div>
-    <script src="scripts/paginas/historico.js"></script>
+    <script src="scripts/paginas/compras.js"></script>
 </body>
 </html>
 
