--- a/www/contato.html
+++ b/www/contato.html
@@ -16,7 +16,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Entre em contato conosco</label>
+                            <label class="input-label"><strong> Entre em contato conosco </strong> </label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" readonly />
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" readonly />
                             <input type="text" name="contactNameField" value="" class="contactField  " id="ASSUNTO" placeholder="Assunto" required />
