--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -16,8 +16,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Busca</label>
-                            <!--<label class="input-label">Sua moeda</label>-->
+                            <label class="input-label"><strong> Busca </strong></label>                            <!--<label class="input-label">Sua moeda</label>-->
                             <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento('DISTANCIA', true);"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
