--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
                 <div class="no-bottom">
                     <div>
                         <!--<fieldset>-->
-                        <label class="input-label">Entrar</label>
+                        <label class="input-label"><strong> Entrar </strong></label>
                         <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
                         <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required  />
                         <!--</fieldset>-->
