--- a/www/operacao.html
+++ b/www/operacao.html
@@ -7,7 +7,7 @@
     <div id="content" class="page-content">
         <input type="hidden" name="IOF" id="IOF" value="0.38" />
         <input type="hidden" name="TAXA_SERVICO" id="TAXA_SERVICO" value="15.00">
-        <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA" value="30.00">
+        <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA">
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
@@ -100,7 +100,6 @@
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
-    <script src="scripts/jsmodel/Bancos.js"></script>
     <script type="text/javascript">
 
         jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
