--- a/www/perfil.html
+++ b/www/perfil.html
@@ -22,7 +22,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Meus dados</label>
+                            <label class="input-label"><strong>Meus dados</strong></label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required readonly="readonly" />
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
