--- a/www/contato.html
+++ b/www/contato.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="scripts/paginas/contato.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -16,7 +17,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Entre em contato conosco</label>
+                            <label class="input-label"><strong> Entre em contato conosco </strong> </label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" readonly />
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" readonly />
                             <input type="text" name="contactNameField" value="" class="contactField  " id="ASSUNTO" placeholder="Assunto" required />
@@ -27,9 +28,10 @@
             </div>
 
         </div>
+        <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
+        <script type="text/javascript" src="scripts/jqueryui.js"></script>
         <script type="text/javascript" src="scripts/framework.plugins.js"></script>
         <script type="text/javascript" src="scripts/custom.js"></script>
-        <script type="text/javascript" src="scripts/paginas/contato.js"></script>
     </div>
 </body>
 </html>
