--- a/www/inicio.html
+++ b/www/inicio.html
@@ -57,26 +57,25 @@
                         <i class="fa"></i>
                     </a>
                 </div>
-                <div class="sidebar-decoration"></div>
+                <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('perfil.html')" class="nav-item">
-                        <i class="fa  fa-user"></i>
+                        <i class="fa fa-user"></i>
                         Meus Dados
                         <i class="fa"></i>
                     </a>
                 </div>
- 
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('historico.html')" class="nav-item">
-                        <i class="fa  fa-clock-o"></i>
+                    <a onclick="CarregaMenu('compras.html')" class="nav-item">
+                        <i class="fa fa-money"></i>
                         Minhas compras
                         <i class="fa"></i>
                     </a>
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('favoritos.html')" class="close-nav nav-item">
-                        <i class="fa  fa-area-chart"></i>
+                    <a onclick="CarregaMenu('favoritos.html')" class="nav-item">
+                        <i class="fa fa-clock-o"></i>
                         Favoritos
                         <i class="fa"></i>
                     </a>
@@ -84,7 +83,7 @@
   
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('contato.html')" class="nav-item">
-                        <i class="fa  fa-envelope"></i>
+                        <i class="fa fa-envelope"></i>
                         Fale Conosco
                         <i class="fa"></i>
                     </a>
