--- a/www/perfil.html
+++ b/www/perfil.html
@@ -3,11 +3,7 @@
 
 <head>
     <title></title>
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-
+    <script type="text/javascript" src="scripts/paginas/perfil.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -22,7 +18,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Meus dados</label>
+                            <label class="input-label"><strong>Meus dados</strong></label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required readonly="readonly" />
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
@@ -58,10 +54,12 @@
                 </div>
             </div>
         </div>
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
     </div>
-    <script src="scripts/paginas/perfil.js"></script>
     <script>
-
         jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
         jQuery('#CPF').inputmask("999.999.999-99");
         jQuery('#CEP').inputmask("99999-999");
