--- a/www/compras.html
+++ b/www/compras.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script type="text/javascript" src="scripts/paginas/historico.js"></script>
+    <script type="text/javascript" src="scripts/paginas/compras.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -28,12 +28,11 @@
                 <br />
             </div>
         </fieldset>
-        <script src="scripts/jquery-2.1.4.js"></script>
+        <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
         <script type="text/javascript" src="scripts/jqueryui.js"></script>
         <script type="text/javascript" src="scripts/framework.plugins.js"></script>
         <script type="text/javascript" src="scripts/custom.js"></script>
     </div>
-
 </body>
 </html>
 
