--- a/www/deposito.html
+++ b/www/deposito.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="scripts/paginas/deposito.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
-        <input type="hidden" name="IOF" id="IOF" value="0.38" />
-        <input type="hidden" name="TAXA_SERVICO" id="TAXA_SERVICO" value="15.00">
-        <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA" value="30.00">
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
@@ -15,42 +13,7 @@
         </div>
         <div class="header-clear-small"></div>
         <div id="DIVOPERACAO">
-            <div class="content" id="DIVDADOSVALORES">
-            </div>
-            <div class="content hide-exchange" id="DIVDADOSENDERECO">
-                <div class="container no-bottom">
-                    <div class="no-bottom">
-                        <div>
-                            <fieldset>
-                                <div class="big-notification static-notification-white" id="38">
-                                    <div>Confirmação de Depósito</div>
-                                    <label class="contact-text">CEP</label>
-                                    <input type="text" name="contactFieldExchange" class="contactFieldExchange" id="CEP" placeholder="CEP" onblur="CarregaEnderecoPorCep(this);" required />
-                                    <label class="contact-text">Endereço</label>
-                                    <input type="text" name="ENDERECO" value="" class="contactFieldExchange" id="ENDERECO" placeholder="Logradouro" required />
-                                    <label class="contact-text">Número</label>
-                                    <input type="number" name="NUMERO" value="" class="contactFieldExchange" id="NUMERO" placeholder="Número" required />
-                                    <label class="contact-text">Complemento</label>
-                                    <input type="text" name="COMPLEMENTO" value="" class="contactFieldExchange" id="COMPLEMENTO" placeholder="Complemento" required />
-                                    <label class="contact-text">Bairro</label>
-                                    <input type="text" name="BAIRRO" value="" class="contactFieldExchange" id="BAIRRO" placeholder="Bairro" required />
-                                    <label class="contact-text">Cidade</label>
-                                    <input type="text" name="CIDADE" value="" class="contactFieldExchange" id="CIDADE" placeholder="Cidade" required />
-                                    <label class="contact-text">UF</label>
-                                    <input type="text" name="UF" value="" class="contactFieldExchange" id="UF" placeholder="UF" required />
-                                    <div class="static-notification-exchange" onclick="Confirmar(2)">
-                                        <p class="center-text" style="color:white">
-                                            Prosseguir
-                                        </p>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content hide-exchange" id="DIVDADOSUSUARIO">
+            <div class="content" id="DIVDADOSUSUARIO">
                 <div class="container no-bottom">
                     <div class="no-bottom">
                         <div>
@@ -58,17 +21,23 @@
                                 <div class="big-notification static-notification-white" id="38">
                                     <div> Dados do Depóstio/Transferência </div>
                                     <p>
-                                        Para podermos identificar o depósito, por favor informar a conta corrente de origem do pagamento.
+                                        Para podermos identificar o depósito/transferencia, por favor informar a conta corrente de origem do pagamento.
                                     </p>
                                     <p>
                                         O pagamento deverá ser realizado exclusivamente pela conta do comprador
                                     </p>
+                                    <label class="contact-text">Nome</label>
+                                    <input type="text" name="NOME" value="" class="contactFieldExchange" id="NOME" placeholder="Nome" required />
+                                    <label class="contact-text">CPF</label>
+                                    <input type="text" name="CPF" value="" class="contactFieldExchange" id="CPF" placeholder="CPF" required />
                                     <label class="contact-text">Banco</label>
-                                    <select name="" class="contactFieldExchange" id="BANCOS"></select>
+                                    <input type="text" name="BANCO" value="" class="contactFieldExchange" id="BANCO" placeholder="Banco" required />
                                     <label class="contact-text">Agência</label>
                                     <input type="text" name="AGENCIA" value="" class="contactFieldExchange" id="AGENCIA" placeholder="Agência" required />
                                     <label class="contact-text">Conta</label>
-                                    <input type="text" name="CONTA" value="" class="contactFieldExchange" id="CONTA" placeholder="C/C" required />
+                                    <input type="text" name="CONTA" value="" class="contactFieldExchange" id="CONTA" placeholder="Conta" required />
+                                    <label class="contact-text">Valor da transação</label>
+                                    <input type="text" name="VALOR" value="" class="contactFieldExchange" id="VALOR" placeholder="Valor" required />
                                     <label class="contact-text">Data nº da transação</label>
                                     <input type="text" name="DATA" value="" class="contactFieldExchange" id="DATA" placeholder="Data da transação" required />
                                     <label class="contact-text">Nº da transação</label>
@@ -84,18 +53,13 @@
                     </div>
                 </div>
             </div>
-            <div class="content" id="DIVDADOSOPERACAO">
-            </div>
-            <div class="content" id="DIVDADOSCONFIRMACAO">
-            </div>
         </div>
     </div>
-    <!---->
     <script src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/paginas/deposito.js"></script>
+
     <script type="text/javascript">
 
         jQuery('#DATA').inputmask("99/99/9999");
