--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -8,7 +8,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a  href="#"><i></i></a>
+            <a><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -16,8 +16,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label">Busca</label>
-                            <!--<label class="input-label">Sua moeda</label>-->
+                            <label class="input-label"><strong> Busca </strong></label>                            <!--<label class="input-label">Sua moeda</label>-->
                             <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento('DISTANCIA', true);"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
@@ -44,9 +43,8 @@
             <br />
         </div>
     </div>
-
     <script type="text/javascript" src="scripts/custom.js"></script>
-    <script src="scripts/paginas/estabelecimento.js"></script>
+    <script type="text/javascript" src="scripts/paginas/estabelecimento.js"></script>
 </body>
 
 </html>
