--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -13,7 +13,7 @@
             <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a  href="#"><i></i></a>
+            <a><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -21,6 +21,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
+                            <label class="input-label"><strong> Favoritos </strong></label>       
                             <div id="DIVESTABELECIMENTO">
                             </div>
                         </fieldset>
