--- a/www/operacao.html
+++ b/www/operacao.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
         <input type="hidden" name="IOF" id="IOF" value="0.38" />
         <input type="hidden" name="TAXA_SERVICO" id="TAXA_SERVICO" value="15.00">
-        <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA" value="30.00">
+        <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA">
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
@@ -95,11 +96,7 @@
         </div>
     </div>
     <!---->
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
+
     <script type="text/javascript">
 
         jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
