--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="scripts/paginas/estabelecimento.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -43,8 +44,10 @@
             <br />
         </div>
     </div>
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/paginas/estabelecimento.js"></script>
 </body>
 
 </html>
