--- a/www/pg_contato.html
+++ b/www/pg_contato.html
@@ -133,7 +133,7 @@
         function MontaMapa(data) {
 
             var html = "<strong class='contact-text'>" + data.NOME + "</strong><br>" +
-               "<a class='contact-text' href='#'>Tel :" + data.FONE + "</a>" +
+               //"<a class='contact-text' href='#'>Tel :" + data.FONE + "</a>" +
                //"<a class='contact-mail' href='#'>Email: " + data.EMAIL + "</a>" +
                "<a class='contact-text' href='#'>Endereço :" + data.ENDERECO + " , " + data.NUMERO + "</a>" +
                "<a class='contact-text' href='#'>Comp. :" + data.COMPLEMENTO + "</a>" +
