--- a/www/operacao.html
+++ b/www/operacao.html
@@ -96,7 +96,10 @@
         </div>
     </div>
     <!---->
-
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript">
 
         jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
