--- a/www/operacao.html
+++ b/www/operacao.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div id="content" class="page-content">
-        <input type="hidden" name="IOF" id="IOF" value="0.38" />
-        <input type="hidden" name="TAXA_SERVICO" id="TAXA_SERVICO" value="15.00">
+        <!--<input type="hidden" name="IOF" id="IOF"/>
+        <input type="hidden" name="TAXA_SERVICO" id="TAXA_SERVICO">-->
         <input type="hidden" name="TAXA_ENTREGA" id="TAXA_ENTREGA">
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
@@ -96,9 +96,9 @@
         </div>
     </div>
     <!---->
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
+    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript">
 
