--- a/www/contato.html
+++ b/www/contato.html
@@ -28,9 +28,9 @@
             </div>
 
         </div>
-        <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
-        <script type="text/javascript" src="scripts/jqueryui.js"></script>
-        <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+        <!--<script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
+        <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
+        <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
         <script type="text/javascript" src="scripts/custom.js"></script>
     </div>
 </body>
