--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -44,9 +44,9 @@
             <br />
         </div>
     </div>
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
+    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
 </body>
 
