--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title></title>
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
+    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script src="scripts/paginas/favoritos.js"></script>
 </head>
