--- a/www/inicio.html
+++ b/www/inicio.html
@@ -103,7 +103,8 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
