--- a/www/inicio.html
+++ b/www/inicio.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="sidebar-logo">
                     <a onclick="CarregaMenu('estabelecimento.html')">  
-                    <img src="img/LOGO_eXCHANGE_BRANCO.png" width="138" height="60" />
+                    <img src="img/ICONE_eXCHANGE_BRANCO_GRANDE.png" width="128" height="128" />
                     </a>
                 </div>
                 <div class="navigation-item">
@@ -57,34 +57,33 @@
                         <i class="fa"></i>
                     </a>
                 </div>
-                <div class="sidebar-decoration"></div>
+                <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('perfil.html')" class="nav-item">
-                        <i class="fa  fa-user"></i>
+                        <i class="fa fa-user"></i>
                         Meus Dados
                         <i class="fa"></i>
                     </a>
                 </div>
- 
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('compras.html')" class="nav-item">
-                        <i class="fa  fa-clock-o"></i>
+                        <i class="fa fa-money"></i>
                         Minhas compras
                         <i class="fa"></i>
                     </a>
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('historico.html')" class="close-nav nav-item">
-                        <i class="fa  fa-area-chart"></i>
-                        Histórico
+                    <a onclick="CarregaMenu('favoritos.html')" class="nav-item">
+                        <i class="fa fa-clock-o"></i>
+                        Favoritos
                         <i class="fa"></i>
                     </a>
                 </div>
   
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('contato.html')" class="nav-item">
-                        <i class="fa  fa-envelope"></i>
+                        <i class="fa fa-envelope"></i>
                         Fale Conosco
                         <i class="fa"></i>
                     </a>
@@ -104,7 +103,8 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
