--- a/www/operacao.html
+++ b/www/operacao.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -95,11 +96,10 @@
         </div>
     </div>
     <!---->
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <script src="scripts/jquery-2.1.4min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script src="scripts/framework.plugins.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
     <script type="text/javascript">
 
         jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
