--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -2,18 +2,14 @@
 <html>
 <head>
     <title></title>
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script src="scripts/paginas/favoritos.js"></script>
+
 </head>
 <body>
     <div id="content" class="page-content">
             <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a  href="#"><i></i></a>
+            <a><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -21,6 +17,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
+                            <label class="input-label"><strong> Favoritos </strong></label>       
                             <div id="DIVESTABELECIMENTO">
                             </div>
                         </fieldset>
@@ -30,6 +27,13 @@
             <br />
             <br />
         </div>
+        <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+        <script src="scripts/jquery-2.1.4min.js"></script>
+        <script type="text/javascript" src="scripts/jqueryui.js"></script>
+        <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
+        <script src="scripts/framework.plugins.min.js"></script>
+        <script type="text/javascript" src="scripts/custom.js"></script>
+        <script src="scripts/paginas/favoritos.js"></script>
     </div>
 
 </body>
