--- a/www/historico.html
+++ b/www/historico.html
@@ -1,19 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-
     <title></title>
-    <script type="text/javascript" src="scripts/jquery.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/paginas/historico.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
         <div class="header">
-            <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
+            <a class="open-nav"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+            <a class="open-nav"><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <fieldset>
@@ -22,19 +18,22 @@
                     <div class="no-bottom">
                         <div>
                             <fieldset>
-                                
-                                    <label class="input-label"><strong> Histórico </strong></label>
-                                    <div id="DIVHISTORICO">
-                                    </div>
-</fieldset>
+                                <label class="input-label"><strong> Minhas compras </strong></label>
+                                <div id="DIVHISTORICO">
+                                </div>
+                            </fieldset>
                         </div>
                     </div>
                 </div>
                 <br />
             </div>
         </fieldset>
+        <!--<script src="scripts/jquery-2.1.4.js"></script>
+        <script type="text/javascript" src="scripts/jqueryui.js"></script>
+        <script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
+        <script type="text/javascript" src="scripts/custom.js"></script>
     </div>
-    <script src="scripts/paginas/historico.js"></script>
+
 </body>
 </html>
 
