--- a/www/deposito.html
+++ b/www/deposito.html
@@ -40,7 +40,7 @@
                                     <select name="DEPOSITO" class="contactFieldExchange" id="DEPOSITO" ></select>
                                     <label class="contact-text">Valor da transação</label>
                                     <input type="text" name="VALOR" value="" class="contactFieldExchange" id="VALOR" placeholder="Valor" disabled />
-                                    <label class="contact-text">Data da transação</label>
+                                    <label class="contact-text">Data nº da transação</label>
                                     <input type="text" name="DATA" value="" class="contactFieldExchange" id="DATA" placeholder="Data da transação" required />
                                     <label class="contact-text">Nº da transação</label>
                                     <input type="text" name="NUM_DOC" value="" class="contactFieldExchange" id="NUM_DOC" placeholder="Nº da transação" required />
@@ -57,9 +57,11 @@
             </div>
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.1.4min.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script src="scripts/framework.plugins.min.js"></script>
+    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
 
     <script type="text/javascript">
