--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -44,8 +44,10 @@
             <br />
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.1.4min.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script src="scripts/framework.plugins.min.js"></script>
     <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
 </body>
