--- a/www/index.html
+++ b/www/index.html
@@ -65,10 +65,19 @@
                         <p class=" center-text" style="color: #0489B1; font-size: 15px;">
                         Cadastrar</p>
                     </div>
-                </div>
-            </div>
+
+                   
         </div>
     </div>
+            <div style="font-size:32px; text-align:center;">
+
+                <div class='one-half'>
+                  <i class="fa fa-facebook-f" style="color:white;"></i>
+                </div>
+                <div class='two-half last-column'>
+                    <i class="fa fa-google-plus" style="color:white;"></i>
+                </div>
+            </div>
 </body>
 
 </html>
