--- a/www/inicio.html
+++ b/www/inicio.html
@@ -107,6 +107,7 @@
     <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/my.accounting.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
 
