--- a/www/perfil.html
+++ b/www/perfil.html
@@ -54,9 +54,9 @@
                 </div>
             </div>
         </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script src="scripts/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+        <script type="text/javascript" src="scripts/framework.plugins.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     </div>
     <script>
