--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -2,11 +2,7 @@
 <html>
 <head>
     <title></title>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
-    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script src="scripts/paginas/favoritos.js"></script>
+
 </head>
 <body>
     <div id="content" class="page-content">
@@ -31,6 +27,13 @@
             <br />
             <br />
         </div>
+        <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+        <script src="scripts/jquery-2.1.4min.js"></script>
+        <script type="text/javascript" src="scripts/jqueryui.js"></script>
+        <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
+        <script src="scripts/framework.plugins.min.js"></script>
+        <script type="text/javascript" src="scripts/custom.js"></script>
+        <script src="scripts/paginas/favoritos.js"></script>
     </div>
 
 </body>
